--- a/web-developer.html
+++ b/web-developer.html
@@ -46,6 +46,18 @@
 <p><span class="badge badge-light">Chicago, Illinois, United States Chicago, IL Minneapolis</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
+<h5><a href='https://www.workable.com/j/565AB129FD'>OneinaMil - Jobs: C#/ASP.Net MVC Web Developer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Apply online for the job of C#/ASP.Net MVC Web Developer at OneinaMil.</p>
+<hr/>
+<h5><a href='https://advfn.workable.com/j/710A49B7DB'>Web Application Developer (PHP, JS) - Apply online - ADVFN - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 20, 2019 ... Apply online for the job of Web Application Developer (PHP, JS) at ADVFN.</p>
+<hr/>
+<h5><a href='https://openwt.workable.com/j/9B9CEE2322?viewed=true'>Open Web Technology - Jobs: Backend DEVELOPER Java - Apply ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 15, 2019 ... Apply online for the job of Backend DEVELOPER Java at Open Web Technology.</p>
+<hr/>
 <h5><a href='https://seequent.workable.com/j/A0DA83F3D2'>Seequent - Jobs: Web Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
@@ -117,7 +129,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -130,7 +142,7 @@ Platform?...</p>
 <p>2 days ago ... Looking for a seasoned python developer(3-5 years) with experience working 
 with any of these technologies: flask /django, postgres/mysql, react/vuejs, css3,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/moriassociates/job/oiGDafwv'>MORI Associates, Inc. Careers - Website Developer Specialist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/moriassociates/job/oiGDafwv'>MORI Associates, Inc. Careers - Website Developer Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -139,7 +151,7 @@ with any of these technologies: flask /django, postgres/mysql, react/vuejs, css3
 <p>vor 4 Tagen ... Westphalia DataLab GmbH has a job opening for Web Developer (w/m/d) in 
 M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692176926-senior-web-application-developer-ui-ux-developer'>Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692176926-senior-web-application-developer-ui-ux-developer'>Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -221,7 +233,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Helsinki, Finland North America</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://scopicsoftware.recruiterbox.com/jobs/fk03mxe/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scopicsoftware.recruiterbox.com/jobs/fk03mxe/'>
     Remote Junior Web Developer at Scopic Software
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -337,7 +349,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
+<h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -373,7 +385,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/yxjen523EV/Web-Application-Developer-II'>Web Application Developer II - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/yxjen523EV/Web-Application-Developer-II'>Web Application Developer II - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -451,18 +463,6 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <hr/>
 <h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-web-developer-21628-bUeWt-QuSr6yuBaKkRyNN8'>Senior Web Developer-21628 #0187 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-18</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/stars-group/job/oeRzafwy'>The Stars Group Careers - Web Developer (Web Poker)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-18</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/nstar-financial/job/oHfJ9fwy'>Northstar Financial Services Group, LLC Careers - Software Engineer - UI Web Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-18</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MindMaze/743999686938995-front-end-web-developer'>MindMaze Front End Web Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Lausanne, Switzerland</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
